# WBC-NMPC

./: .gitignore  CMakeLists.txt  MujocoUI.hpp  README.md  lip_simulator_main.cpp  main.cpp  test.cpp
g1_description/: unitreeg1.urdf
g1_mj_description/: unitreeg1.xml
include/hrp4_locomotion/: DiscreteLIPDynamics.hpp  DoubleSupportConfiguration.hpp  Foot.hpp  FootstepPlanElement.hpp  GaitConfiguration.hpp  ISMPC.hpp  JointCommand.hpp  JointState.hpp  JsonConverter.hpp  LIPSimulator.hpp  LIPState.hpp  RobotState.hpp  SE3.hpp  TimingLaw.hpp  WBNMPC.hpp  WalkingData.hpp  WalkingManager.hpp  WalkingState.hpp  WholeBodyController.hpp  utils.hpp
include/labrob_qpsolvers/: HPIPMQPSolver.hpp  OSQPSolver.hpp  QPSolver.hpp  QPSolverEigenWrapper.hpp  osqp_mpc.hpp  qpsolvers.hpp
jvrc_description/urdf/: jvrc1.urdf
jvrc_mj_description/: jvrc1.xml  scene.xml  stair_steps.xml
scripts/: plot_force_data.py  plot_joint_data.py  plot_lip_simulator_data.py  plot_mpc_data.py
src/: DiscreteLIPDynamics.cpp  DoubleSupportConfiguration.cpp  FootstepPlanElement.cpp  ISMPC.cpp  JointCommand.cpp  JointState.cpp  JsonConverter.cpp  LIPSimulator.cpp  LIPState.cpp  RobotState.cpp  SE3.cpp  WBC.cpp  WBNMPC.cpp  WalkingController.cpp  WalkingData.cpp  WalkingManager.cpp  WalkingState.cpp  WholeBodyController.cpp  utils.cpp
